# comp-sci-daily

./: .env.docker  .gitignore  Caddyfile  README.md  docker-compose.yml
client/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
client/src/: App.vue  main.ts
client/src/components/: AnswerSection.vue  QuestionCard.vue
client/src/composables/: useAuthenticatedUser.ts
client/src/router/: index.ts
client/src/services/: api.ts
client/src/stores/: auth.ts  trivia.ts
client/src/views/: CallbackPage.vue  CreateQuestionPage.vue  HomePage.vue  QuestionPage.vue  TodaysQuestionPage.vue  WelcomePage.vue
server/: Dockerfile  README.md  conftest.py  init_db.sh  init_db.sql  pyproject.toml
server/src/: config.py  database.py  main.py
server/src/auth/: __init__.py  auth0.py
server/src/dependencies/: get_db.py  get_user.py
server/src/domains/: __init__.py
server/src/domains/answers/: __init__.py
server/src/domains/answers/get_answer_by_question_id/: __init__.py  test_get_answer_by_question_id.py
server/src/domains/questions/: __init__.py  choices_helper.py
server/src/domains/questions/create_question/: __init__.py  test_create_question.py
server/src/domains/questions/get_question_by_id/: __init__.py  test_get_question_by_id.py
server/src/domains/questions/get_today/: __init__.py  test_get_today.py
