[project]
name = "comp-sci-daily"
version = "0.1.0"
description = "Daily Computer Science Trivia"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.49",
    "auth0-fastapi-api>=1.0.0b7",
    "pytest>=9.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "isort>=8.0.1",
    "pyclean>=3.7.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "uv-upsync>=2.3.2",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
